--- a/CurrencyRatesCollector.Common/packages.config
+++ b/CurrencyRatesCollector.Common/packages.config
@@ -1,5 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="AlphaVantage.Net.Core" version="1.0.3" targetFramework="net48" />
+  <package id="AlphaVantage.Net.Stocks" version="1.0.2" targetFramework="net48" />
+  <package id="JetBrains.Annotations" version="11.1.0" targetFramework="net48" />
+  <package id="Microsoft.AspNetCore.WebUtilities" version="2.0.2" targetFramework="net48" />
   <package id="Microsoft.Bcl.AsyncInterfaces" version="1.1.1" targetFramework="net48" />
   <package id="Microsoft.Bcl.HashCode" version="1.1.0" targetFramework="net48" />
   <package id="Microsoft.CSharp" version="4.7.0" targetFramework="net48" />
@@ -20,12 +24,15 @@
   <package id="Microsoft.Extensions.Logging.Abstractions" version="3.1.4" targetFramework="net48" />
   <package id="Microsoft.Extensions.Options" version="3.1.4" targetFramework="net48" />
   <package id="Microsoft.Extensions.Primitives" version="3.1.4" targetFramework="net48" />
+  <package id="Microsoft.Net.Http.Headers" version="2.0.2" targetFramework="net48" />
+  <package id="Newtonsoft.Json" version="11.0.2" targetFramework="net48" />
   <package id="Npgsql" version="4.1.3.1" targetFramework="net48" />
   <package id="Npgsql.EntityFrameworkCore.PostgreSQL" version="3.1.4" targetFramework="net48" />
   <package id="System.Buffers" version="4.5.1" targetFramework="net48" />
   <package id="System.Collections.Immutable" version="1.7.1" targetFramework="net48" />
   <package id="System.ComponentModel.Annotations" version="4.7.0" targetFramework="net48" />
   <package id="System.Diagnostics.DiagnosticSource" version="4.7.1" targetFramework="net48" />
+  <package id="System.Diagnostics.PerformanceCounter" version="5.0.0" targetFramework="net48" />
   <package id="System.Memory" version="4.5.4" targetFramework="net48" />
   <package id="System.Numerics.Vectors" version="4.5.0" targetFramework="net48" />
   <package id="System.Runtime.CompilerServices.Unsafe" version="4.7.1" targetFramework="net48" />
