--- a/CurrencyRatesCollector.WinService/packages.config
+++ b/CurrencyRatesCollector.WinService/packages.config
@@ -21,6 +21,7 @@
   <package id="System.Collections.Immutable" version="1.7.1" targetFramework="net48" />
   <package id="System.ComponentModel.Annotations" version="4.7.0" targetFramework="net48" />
   <package id="System.Diagnostics.DiagnosticSource" version="4.7.1" targetFramework="net48" />
+  <package id="System.Diagnostics.PerformanceCounter" version="5.0.0" targetFramework="net48" />
   <package id="System.Memory" version="4.5.4" targetFramework="net48" />
   <package id="System.Numerics.Vectors" version="4.5.0" targetFramework="net48" />
   <package id="System.Runtime.CompilerServices.Unsafe" version="4.7.1" targetFramework="net48" />
